change html and css

--- a/calcBudget/html/index.html
+++ b/calcBudget/html/index.html
@@ -18,9 +18,10 @@
     </div>
 
     <div class="input-area">
-        <div class="input-number">
-            0
-        </div>
+        <label class="input-label">
+            <div class="history">История</div>
+            <input id="input-number" class="inp" placeholder="0">
+        </label>
         <div class="input-buttons">
             <div class="nums">
                 <div class="row">
@@ -39,8 +40,8 @@
                     <button class="btn-number">1
                 </div>
                 <div class="row">
-                    <button class="btn-number">0
-                    <button class="btn-number">,
+                    <button class="btn-number zero">0
+                    <button class="btn-number comma">,
                 </div>
             </div>
             <div class="btn-edits">
