--- a/Todo_list/html/index.html
+++ b/Todo_list/html/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Todolist</title>
+    <link rel="stylesheet" href="../css/style.css" type="text/css"/>
 </head>
 <body>
+    <main id="app">
+        <header>
+            <h1>Todo.js</h1>
+        </header>
 
+        <ul id="todo-list">
+            <li class="todo-item">
+                <input class="checkbox" type="checkbox">
+                <label class="title">1 задача</label>
+                <input class="textfield" type="text">
+                <button class="edit">Изменить</button>
+                <button class="delete">Удалить</button>
+            </li>
+        </ul>
+
+        <form id="todo-form">
+            <input id="add-input" type="text" placeholder="Введите задачу здесь">
+            <button id="add-button" type="submit">Добавить</button>
+        </form>
+    </main>
+
+    <script src="../js/main.js"></script>
 </body>
 </html>
