--- a/Todo_list/html/index.html
+++ b/Todo_list/html/index.html
@@ -13,16 +13,16 @@
 
         <ul id="todo-list">
             <li class="todo-item">
-                <input class="checkbox" type="checkbox">
+                <input class="checkbox" type="checkbox"/>
                 <label class="title">1 задача</label>
-                <input class="textfield" type="text">
+                <input class="textfield" type="text"/>
                 <button class="edit">Изменить</button>
                 <button class="delete">Удалить</button>
             </li>
         </ul>
 
         <form id="todo-form">
-            <input id="add-input" type="text" placeholder="Введите задачу здесь">
+            <input id="add-input" type="text" placeholder="Введите задачу здесь"/>
             <button id="add-button" type="submit">Добавить</button>
         </form>
     </main>
