--- a/todoList-oopStyle/public/index.html
+++ b/todoList-oopStyle/public/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Todo list app</title>
+    <link href="css/app.css" type="text/css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
+    <main id="app">
+        <header>
+            <h1>TodoList</h1>
+        </header>
 
+        <ul id="todo-list">
+        </ul>
+
+        <form id="todo-form">
+            <input id="add-input" type="text">
+            <button id="add-button" type="submit">Добавить</button>
+        </form>
+    </main>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
