--- a/calcBudget/public/index.html
+++ b/calcBudget/public/index.html
@@ -8,7 +8,8 @@
 <body>
 <div class="container">
     <div class="header">
-        <a href="/#history">История</a>
+        <a href="/">Калькулятор</a>
+        <a href="/history">История</a>
         <div id="daysCount"></div>
         <hr>
     </div>
